apps/casa/jitsi/manifests/prosody.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prosody
  namespace: jitsi
spec:
  type: ClusterIP
  selector:
    app: jitsi-prosody
  ports:
    - name: http
      port: 5280
      targetPort: http
      protocol: TCP
    - name: xmpp-client
      port: 5222
      targetPort: xmpp-client
      protocol: TCP
    - name: xmpp-federation
      port: 5269
      targetPort: xmpp-federation
      protocol: TCP
    - name: xmpp-component
      port: 5347
      targetPort: xmpp-component
      protocol: TCP
