apps/casa/jitsi/manifests/web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jitsi-web
  namespace: jitsi
spec:
  type: ClusterIP
  selector:
    app: jitsi-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
